[package]
name = "ved-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ved-compiler = { path = "../ved-compiler" }
ved-runtime = { path = "../ved-runtime/crates/ved-runtime" }
ved-tracer = { path = "../ved-runtime/crates/ved-tracer" }
